--- a/DrMoradi/Areas/UserPanel/Views/Shared/_UserPanelLayout.cshtml
+++ b/DrMoradi/Areas/UserPanel/Views/Shared/_UserPanelLayout.cshtml
@@ -49,6 +49,7 @@
                     </div>
                     <ul class="list-unstyled menu-list">
                         <li><span class="icon">👤</span><a href="/userPanel/userDiet/mydiet"> رژیم های من</a></li>
+                        <li>    <span class="icon">💬</span><a href="/userPanel/UserPanel/Comment"> نظرات من</a></li>
                         <li><span class="icon">⚙️</span> تنظیمات</li>
                         <li><span class="icon">🚪</span><a href="/Logout"> خروج</a></li>
                     </ul>
@@ -70,10 +71,12 @@
                     <div class="text-center mb-3">
                         <img src="/FileUpload/Doctor/images.png" class="rounded-circle mb-2" width="80" alt="پروفایل" />
                         <div class="fw-bold">علی محمدی</div>
-                        <small class="text-muted">کاربر ویژه</small>
+                        <small class="text-muted">کاربر </small>
                     </div>
                     <ul class="list-unstyled menu-list">
                         <li><span class="icon">👤</span><a href="/userPanel/userDiet/mydiet"> رژیم های من</a></li>
+                        <li>    <span class="icon">💬</span><a href="/userPanel/UserPanel/Comment"> نظرات من</a></li>
+
                         <li><span class="icon">⚙️</span> تنظیمات</li>
                         <li><span class="icon">🚪</span><a href="/Logout"> خروج</a></li>
                     </ul>
