--- a/DrMoradi/Views/Shared/_SiteFooter.cshtml
+++ b/DrMoradi/Views/Shared/_SiteFooter.cshtml
@@ -7,47 +7,47 @@
             <div class="col-lg-8 col-md-12 footer-links text-lg-start text-center">
                 <h6 class="footer-title">دسترسی سریع</h6>
                 <div>
-                    <a asp-action="DietDetail" asp-route-DietId="1">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="1">
                         رژیم کاهش وزن
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="2">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="2">
                         رژیم افزایش وزن
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="3">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="3">
                         رژیم ورزشی
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="4">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="4">
                         رژیم کاهش وزن گیاهخواران
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="6">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="6">
                         رژیم تعیین جنسیت جنین قبل از بارداری
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="12">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="12">
                         رژیم بیماران کلیوی
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="13">
+                    <a asp-area="" asp-controller="Home" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="13">
                         رژیم بیماران دیابتی
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="14">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="14">
                         رژیم دوران بارداری
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="15">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="15">
                         رژیم کاهش وزن دوران شیردهی
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="16">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="16">
                         رژیم کاهش وزن خانواده (2 نفر)
                         <i class="bi bi-arrow-left"></i>
                     </a>
-                    <a asp-action="DietDetail" asp-route-DietId="5">
+                    <a asp-area="" asp-controller="Home" asp-action="DietDetail" asp-route-DietId="5">
                         رژیم کاهش وزن خانواده (3 نفر)
                         <i class="bi bi-arrow-left"></i>
                     </a>
