edit user request

--- a/DrMoradi/Areas/Admin/Component/Menu/MyFillMenu.cshtml
+++ b/DrMoradi/Areas/Admin/Component/Menu/MyFillMenu.cshtml
@@ -11,8 +11,7 @@
                     <p>
                         <i class="fa fa-archive nav-icon"></i>
                             @item.Descript
-
-                        <i class="right fa fa-angle-left"></i>
+                            <img src="/Img/angle-left-svgrepo-com.svg" class="right" height="15" />
                     </p>
                 </a>
 
